--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 
 <body>
-    <div class="container"></div>
+    <div class="container">
+<p>
+/-------\<br>
+&nbsp I &nbsp&nbsp&nbsp&nbsp  I<br>
+&nbsp I &nbsp&nbsp&nbsp&nbsp  I<br>
+&nbsp I &nbsp&nbsp&nbsp&nbsp  I<br>
+&nbsp -----<br>&nbsp
+</p>
+</div>
     <script type="text/javascript" src="./dist/app-browserify.js"></script>
 </body>
 
